name:                ITEA
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/ITEA#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2020 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable itea
  ghc-options:         -rtsopts -Wunused-imports -threaded -eventlog -O2 -optc-O3 
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       IT, IT.Random, IT.Regression, IT.ITEA, IT.Mutation, IT.Algorithms, ITEA.Config, ITEA.Regression, RunConfig, RunCrossVal
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, random, mtl, hmatrix, containers, vector, split, parallel, deepseq, random-shuffle, mltool, directory, monad-extras, clock, ConfigFile, MissingH
