name:                itea
version:             1.0.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/ITEA#readme
license:             GPL-3
license-file:        LICENSE
author:              Fabrício Olivetti de França
maintainer:          folivetti@ufabc.edu.br
copyright:           2020 Fabrício Olivetti de França
category:            Web
build-type:          Simple
cabal-version:       >=1.16
extra-source-files:  README.md

executable itea
  ghc-options:         -rtsopts -Wall -threaded -eventlog -O2 -optc-O3 -fno-prof-auto
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       IT, IT.Random, IT.Regression, IT.ITEA, IT.FI2POP, IT.Mutation, IT.Algorithms, IT.Eval, IT.Metrics, IT.Shape, ITEA.Config, ITEA.Report, ITEA.Regression, RunConfig, RunCrossVal 
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, random, mtl, hmatrix, containers, vector, split, parallel, deepseq, random-shuffle, mltool, directory, monad-extras, clock, ConfigFile, MissingH, intervals, monad-par, hmatrix-morpheus
